e98308b Updating Vietnamese translations. (#214)

--- a/i18n/i18n_app_vi.properties
+++ b/i18n/i18n_app_vi.properties
@@ -1,18 +1,18 @@
 about=Gi\u1EDBi thi\u1EC7u
-add_legend=Th\u00EAm ch\u00FA gi\u1EA3i
+add_legend=Th\u00EAm ch\u00FA th\u00EDch
 add_new=Th\u00EAm m\u1EDBi
 address=\u0110\u1ECBa ch\u1EC9
-add_to_dashboard=Th\u00EAm v\u00E0o B\u1EA3ng th\u00F4ng tin
-aggregation_type=Lo\u1EA1i t\u1ED5ng h\u1EE3p
-allow_external_access=Cho ph\u00E9p truy xu\u1EA5t c\u00F4ng khai v\u00E0 kh\u00F4ng c\u1EA7n \u0111\u0103ng nh\u1EADp v\u00E0o DHIS2
+add_to_dashboard=Th\u00EAm v\u00E0o B\u1EA3ng \u0110i\u1EC1u Khi\u1EC3n
+aggregation_type=Ki\u1EC3u t\u1ED5ng h\u1EE3p
+allow_external_access=Cho ph\u00E9p truy c\u1EADp t\u1EEB b\u00EAn ngo\u00E0i DHIS2
 and_or_lower_than=V\u00E0/ho\u1EB7c th\u1EA5p h\u01A1n
 attribution=Thu\u1ED9c t\u00EDnh
 automatic=T\u1EF1 \u0111\u1ED9ng
 average=Trung b\u00ECnh
-bimonthly=Hai-th\u00E1ng
+bimonthly=H\u00E0ng Hai-Th\u00E1ng
 boundary_layer=L\u1EDBp ranh gi\u1EDBi
 by_data_element=Theo Ph\u1EA7n T\u1EED D\u1EEF Li\u1EC7u
-cancel=H\u1EE7y b\u1ECF
+cancel=B\u1ECF qua
 can_edit_and_view=S\u1EEDa v\u00E0 Xem
 can_view=Xem
 chart=Bi\u1EC3u \u0111\u1ED3
@@ -21,14 +21,14 @@ clear=X\u00F3a
 clear_map=X\u00F3a b\u1EA3n \u0111\u1ED3
 clustering=Ch\u00F9m
 code=M\u00E3
-color_scale=Mi\u1EC1n m\u00E0u
+color_scale=Kho\u1EA3ng m\u00E0u
 coordinate_field=V\u00F9ng t\u1ECDa \u0111\u1ED9
 coordinates=To\u1EA1 \u0111\u1ED9
 coordinates_could_not_be_loaded=Kh\u00F4ng th\u1EC3 n\u1EA1p t\u1ECDa \u0111\u1ED9
 count=\u0110\u1EBFm
 create=T\u1EA1o
 created_by=T\u1EA1o b\u1EDFi
-current_legends=Ch\u00FA gi\u1EA3i hi\u1EC7n t\u1EA1i
+current_legends=Ch\u00FA th\u00EDch hi\u1EC7n t\u1EA1i
 daily=H\u00E0ng ng\u00E0y
 data=D\u1EEF li\u1EC7u
 data_and_periods=D\u1EEF li\u1EC7u v\u00E0 th\u1EDDi \u0111i\u1EC3m
@@ -36,99 +36,99 @@ dataelement=Ph\u1EA7n T\u1EED D\u1EEF Li\u1EC7u
 dataelement_group=Nh\u00F3m Ph\u1EA7n T\u1EED D\u1EEF Li\u1EC7u
 dataset=T\u1EADp D\u1EEF Li\u1EC7u
 delete=Xo\u00E1
-delete_favorite=X\u00F3a b\u00E1o c\u00E1o
+delete_favorite=X\u00F3a b\u00E1o c\u00E1o th\u01B0\u1EDDng d\u00F9ng
 details=Chi ti\u1EBFt
 download=T\u1EA3i v\u1EC1
-download_map_as_png=T\u1EA3i v\u1EC1 d\u1EA1ng \u1EA3nh (PNG)
-drill_down_one_level=Tuy\u1EBFn d\u01B0\u1EDBi
-drill_up_one_level=Tuy\u1EBFn tr\u00EAn
-duplicate=Nh\u00E2n \u0111\u00F4i
-earthengine_layer=B\u1EA3n \u0111\u1ED3 tr\u00E1i \u0111\u1EA5t (Google Earth Engine)
-earth_engine_layer_legend=Ch\u00FA gi\u1EA3i b\u1EA3n \u0111\u1ED3 tr\u00E1i \u0111\u1EA5t
-elevation=\u0110\u1ED9 cao l\u00EAn
+download_map_as_png=T\u1EA3i b\u1EA3n \u0111\u1ED3 d\u1EA1ng PNG
+drill_down_one_level=Xem tuy\u1EBFn d\u01B0\u1EDBi
+drill_up_one_level=Xem tuy\u1EBFn tr\u00EAn
+duplicate=Tr\u00F9ng l\u1EB7p
+earthengine_layer=Google Earth Engine
+earth_engine_layer_legend=Ch\u00FA th\u00EDch Google Earth Engine
+elevation=\u0110\u1ED9 cao
 edit_layer=S\u1EEDa l\u1EDBp
-edit_legend=S\u1EEDa ch\u00FA gi\u1EA3i
-email=Th\u01B0 \u0111i\u1EC7n t\u1EED (Email)
+edit_legend=S\u1EEDa ch\u00FA th\u00EDch
+email=Email
 end_date=Ng\u00E0y k\u1EBFt th\u00FAc
 end_value_should_be_bigger_than_start_value=Gi\u00E1 tr\u1ECB cu\u1ED1i n\u00EAn l\u1EDBn h\u01A1n gi\u00E1 tr\u1ECB \u0111\u1EA7u
 equal_counts=Chia \u0111\u1EC1u s\u1ED1 \u0110\u01A1n V\u1ECB
-equal_intervals=Chia \u0111\u1EC1u t\u1ED5ng Gi\u00E1 tr\u1ECB
+equal_intervals=Chia \u0111\u1EC1u t\u1ED5ng Gi\u00E1 tr\u1ECB d\u1EEF li\u1EC7u
 event_data_item=M\u1EE5c d\u1EEF li\u1EC7u s\u1EF1 ki\u1EC7n
 event_data_items=M\u1EE5c d\u1EEF li\u1EC7u s\u1EF1 ki\u1EC7n
 event_layer=L\u1EDBp s\u1EF1 ki\u1EC7n
 event_location=\u0110\u1ECBa \u0111i\u1EC3m s\u1EF1 ki\u1EC7n
 event_time=Th\u1EDDi \u0111i\u1EC3m s\u1EF1 ki\u1EC7n
 external_layer=L\u1EDBp ngo\u1EA1i
-external_layer_legend=Ch\u00FA gi\u1EA3i l\u1EDBp ngo\u1EA1i
-facility_layer=L\u1EDBp c\u01A1 s\u1EDF
+external_layer_legend=Ch\u00FA th\u00EDch l\u1EDBp ngo\u1EA1i
+facility_layer=L\u1EDBp C\u01A1 S\u1EDF
 facility_layer_export_currently_not_supported=Hi\u1EC7n t\u1EA1i kh\u00F4ng h\u1ED7 tr\u1EE3 xu\u1EA5t L\u1EDBp C\u01A1 S\u1EDF
-facility_layer_legend=Ch\u00FA gi\u1EA3i l\u1EDBp c\u01A1 s\u1EDF
-favorite_name=T\u00EAn b\u00E1o c\u00E1o
-favorite_outdated_create_new=B\u00E1o c\u00E1o \u0111\u00E3 l\u1ED7i th\u1EDDi - xin vui l\u00F2ng t\u1EA1o b\u00E1o c\u00E1o m\u1EDBi
-favorites=B\u00E1o c\u00E1o \u01B0a chu\u1ED9ng
+facility_layer_legend=Ch\u00FA th\u00EDch L\u1EDBp C\u01A1 S\u1EDF
+favorite_name=T\u00EAn b\u00E1o c\u00E1o th\u01B0\u1EDDng d\u00F9ng
+favorite_outdated_create_new=B\u00E1o c\u00E1o th\u01B0\u1EDDng d\u00F9ng \u0111\u00E3 l\u1ED7i th\u1EDDi - xin vui l\u00F2ng t\u1EA1o b\u00E1o c\u00E1o m\u1EDBi
+favorites=B\u00E1o c\u00E1o th\u01B0\u1EDDng d\u00F9ng
 filter=B\u1ED9 l\u1ECDc
 filter_by_value=L\u1ECDc theo gi\u00E1 tr\u1ECB
-financial_april=N\u0103m t\u00E0i ch\u00EDnh - Th\u00E1ng 4
-financial_july=N\u0103m t\u00E0i ch\u00EDnh - Th\u00E1ng 7
-financial_oct=N\u0103m t\u00E0i ch\u00EDnh - Th\u00E1ng 10
-google_hybrid=B\u1EA3n \u0111\u1ED3 th\u1EF1c (Google Hybrid)
-google_streets=B\u1EA3n \u0111\u1ED3 \u0111\u01B0\u1EDDng ph\u1ED1 (Google Streets)
-go_to_charts=M\u1EDF Bi\u1EC3u \u0110\u1ED3
-go_to_pivot_tables=M\u1EDF B\u1EA3ng
+financial_april=N\u0103m T\u00E0i Ch\u00EDnh - Th\u00E1ng 4
+financial_july=N\u0103m T\u00E0i Ch\u00EDnh - Th\u00E1ng 7
+financial_oct=N\u0103m T\u00E0i Ch\u00EDnh - Th\u00E1ng 10
+google_hybrid=Google Hybrid
+google_streets=Google Streets
+go_to_charts=M\u1EDF d\u1EE9ng d\u1EE5ng Bi\u1EC3u \u0110\u1ED3
+go_to_pivot_tables=M\u1EDF \u1EE9ng d\u1EE5ng B\u1EA3ng Xoay
 greater_than=L\u1EDBn h\u01A1n
 group=Nh\u00F3m
 group_nearby_events=Nh\u00F3m s\u1EF1 ki\u1EC7n l\u00E2n c\u1EADn
 groups=Nh\u00F3m
 groupset=T\u1EADp nh\u00F3m
 has_no_orgunits=kh\u00F4ng c\u00F3 \u0111\u01A1n v\u1ECB
-high_color_size=M\u00E0u/C\u1EE1 cao
-highlight_color=M\u00E0u cao
-high_size=C\u1EE1 cao
+high_color_size=K\u00EDch c\u1EE1 / M\u00E0u cho gi\u00E1 tr\u1ECB l\u1EDBn
+highlight_color=M\u00E0u n\u1ED5i b\u1EADt
+high_size=C\u1EE1 v\u00F2ng gi\u00E1 tr\u1ECB cao
 home=Trang ch\u1EE7
 indicator=Ch\u1EC9 S\u1ED1
 indicator_group=Nh\u00F3m Ch\u1EC9 S\u1ED1
 information=Th\u00F4ng tin
 infrastructural_data=D\u1EEF li\u1EC7u h\u1EA1 t\u1EA7ng
-invalid_parameter=Th\u00F4ng s\u1ED1 kh\u00F4ng h\u1EE3p l\u1EC7
-item_type=Lo\u1EA1i m\u1EE5c
+invalid_parameter=Tham s\u1ED1 kh\u00F4ng h\u1EE3p l\u1EC7
+item_type=Ki\u1EC3u m\u1EE5c
 landcover=Ph\u1EE7 \u0111\u1EA5t
-last_2_sixmonths=2 s\u00E1u-th\u00E1ng tr\u01B0\u1EDBc
-last_3_months=3 th\u00E1ng tr\u01B0\u1EDBc
-last_4_quarters=4 qu\u00FD tr\u01B0\u1EDBc
-last_4_weeks=4 tu\u1EA7n tr\u01B0\u1EDBc
+last_2_sixmonths=2 l\u1EA7n S\u00E1u-Th\u00E1ng tr\u01B0\u1EDBc
+last_3_months=3 Th\u00E1ng tr\u01B0\u1EDBc
+last_4_quarters=4 Qu\u00FD tr\u01B0\u1EDBc
+last_4_weeks=4 Tu\u1EA7n tr\u01B0\u1EDBc
 last_5_financial_years=5 N\u0103m T\u00E0i Ch\u00EDnh tr\u01B0\u1EDBc
-last_6_bimonths=6 hai-th\u00E1ng tr\u01B0\u1EDBc
-last_6_months=6 th\u00E1ng tr\u01B0\u1EDBc
-last_12_months=12 th\u00E1ng tr\u01B0\u1EDBc
-last_12_weeks=12 tu\u1EA7n tr\u01B0\u1EDBc
-last_52_weeks=52 tu\u1EA7n tr\u01B0\u1EDBc
-last_bimonth=Hai-th\u00E1ng tr\u01B0\u1EDBc
+last_6_bimonths=6 l\u1EA7n Hai-Th\u00E1ng tr\u01B0\u1EDBc
+last_6_months=6 Th\u00E1ng tr\u01B0\u1EDBc
+last_12_months=12 Th\u00E1ng tr\u01B0\u1EDBc
+last_12_weeks=12 Tu\u1EA7n tr\u01B0\u1EDBc
+last_52_weeks=52 Tu\u1EA7n tr\u01B0\u1EDBc
+last_bimonth=L\u1EA7n Hai-Th\u00E1ng tr\u01B0\u1EDBc
 last_financial_year=N\u0103m T\u00E0i Ch\u00EDnh tr\u01B0\u1EDBc
 last_month=Th\u00E1ng tr\u01B0\u1EDBc
 last_quarter=Qu\u00FD tr\u01B0\u1EDBc
-last_sixmonth=S\u00E1u-th\u00E1ng tr\u01B0\u1EDBc
+last_sixmonth=L\u1EA7n S\u00E1u-Th\u00E1ng tr\u01B0\u1EDBc
 last_week=Tu\u1EA7n tr\u01B0\u1EDBc
-last_5_years=5 n\u0103m tr\u01B0\u1EDBc
+last_5_years=5 N\u0103m tr\u01B0\u1EDBc
 last_year=N\u0103m tr\u01B0\u1EDBc
 latitude=V\u0129 \u0111\u1ED9
 layer=L\u1EDBp
 layers=L\u1EDBp
-layer_stack_transparency=T\u00EDnh trong su\u1ED1t
-legend_name=T\u00EAn ch\u00FA gi\u1EA3i
-legend_name_is_required=Y\u00EAu c\u1EA7u c\u00F3 t\u00EAn ch\u00FA gi\u1EA3i
-legends=Ch\u00FA gi\u1EA3i
-legendset=T\u1EADp ch\u00FA gi\u1EA3i
-legend_sets_available=T\u1EADp ch\u00FA gi\u1EA3i hi\u1EC7n c\u00F3
-legend_set_name=T\u00EAn t\u1EADp ch\u00FA gi\u1EA3i
-legendsets=T\u1EADp ch\u00FA gi\u1EA3i
-legend_symbolizer=B\u1ED9 K\u00FD hi\u1EC7u
-legend_type=Lo\u1EA1i ch\u00FA gi\u1EA3i
+layer_stack_transparency=\u0110\u1ED9 m\u1EDD l\u1EDBp
+legend_name=T\u00EAn Ch\u00FA Th\u00EDch
+legend_name_is_required=Y\u00EAu c\u1EA7u c\u00F3 t\u00EAn Ch\u00FA Th\u00EDch
+legends=Ch\u00FA th\u00EDch
+legendset=T\u1EADp Ch\u00FA Th\u00EDch
+legend_sets_available=T\u1EADp ch\u00FA th\u00EDch hi\u1EC7n c\u00F3
+legend_set_name=T\u00EAn T\u1EADp Ch\u00FA Th\u00EDch
+legendsets=T\u1EADp Ch\u00FA Th\u00EDch
+legend_symbolizer=B\u1ED9 K\u00FD Hi\u1EC7u
+legend_type=Lo\u1EA1i Ch\u00FA Th\u00EDch
 level=Tuy\u1EBFn
 longitude=Kinh \u0111\u1ED9
-low_color_size=M\u00E0u/c\u1EE1 th\u1EA5p
-low_size=C\u1EE1 th\u1EA5p
-manage_favorites=Qu\u1EA3n l\u00FD b\u00E1o c\u00E1o \u01B0a chu\u1ED9ng
-map=B\u1EA3n \u0111\u1ED3
+low_color_size=K\u00EDch c\u1EE1 v\u00F2ng / m\u00E0u gi\u00E1 tr\u1ECB th\u1EA5p
+low_size=C\u1EE1 v\u00F2ng gi\u00E1 tr\u1ECB th\u1EA5p
+manage_favorites=Qu\u1EA3n l\u00FD B\u00E1o C\u00E1o Th\u01B0\u1EDDng D\u00F9ng
+map=B\u1EA3n \u0110\u1ED3
 max=L\u1EDBn nh\u1EA5t
 min=Nh\u1ECF nh\u1EA5t
 min_max_c=Nhi\u1EC7t \u0111\u1ED9 l\u1EDBn nh\u1EA5t/nh\u1ECF nh\u1EA5t
@@ -136,36 +136,36 @@ min_max_elevation=G\u00F3c l\u1EDBn nh\u1EA5t/nh\u1ECF nh\u1EA5t
 min_max_people=Ng\u01B0\u1EDDi l\u1EDBn nh\u1EA5t/nh\u1ECF nh\u1EA5t
 min_max_rainfall=L\u01B0\u1EE3ng m\u01B0a l\u1EDBn nh\u1EA5t/nh\u1ECF nh\u1EA5t
 min_max_value=Gi\u00E1 tr\u1ECB l\u1EDBn nh\u1EA5t/nh\u1ECF nh\u1EA5t
-monthly=H\u00E0ng th\u00E1ng
+monthly=H\u00E0ng Th\u00E1ng
 name=T\u00EAn
 next=Sau
 nighttime_lights=\u00C1nh s\u00E1ng \u0111\u00EAm
 no=Kh\u00F4ng
-no_groupset_selected=Ch\u01B0a ch\u1ECDn nh\u00F3m
-no_map_to_save=Ch\u01B0a xu\u1EA5t b\u1EA3n \u0111\u1ED3 \u0111\u1EC3 l\u01B0u
+no_groupset_selected=Ch\u01B0a ch\u1ECDn T\u1EADp Nh\u00F3m
+no_map_to_save=Kh\u00F4ng c\u00F3 b\u1EA3n \u0111\u1ED3 \u0111\u1EC3 l\u01B0u
 none=Kh\u00F4ng c\u00F3
-no_event_coordinates_found=Kh\u00F4ng t\u00ECm th\u1EA5y t\u1ECDa \u0111\u1ED9
+no_event_coordinates_found=Kh\u00F4ng t\u00ECm th\u1EA5y T\u1ECDa \u0110\u1ED9 S\u1EF1 Ki\u1EC7n
 no_organisation_unit_levels=Kh\u00F4ng c\u00F3 Tuy\u1EBFn \u0110\u01A1n V\u1ECB
-no_organisation_units_specified=Ch\u01B0a x\u00E1c \u0111\u1ECBnh \u0111\u01A1n v\u1ECB
-no_period_selected=Ch\u01B0a ch\u1ECDn th\u1EDDi \u0111i\u1EC3m
+no_organisation_units_specified=Ch\u01B0a x\u00E1c \u0111\u1ECBnh \u0110\u01A1n V\u1ECB
+no_period_selected=Ch\u01B0a ch\u1ECDn Th\u1EDDi \u0110i\u1EC3m
 no_program_stage_selected=Ch\u01B0a ch\u1ECDn Giai \u0110o\u1EA1n Ch\u01B0\u01A1ng Tr\u00ECnh
-no_selected_items=Ch\u01B0a ch\u1ECDn m\u1EE5c
+no_selected_items=Ch\u01B0a ch\u1ECDn M\u1EE5c
 no_system_info_found=Kh\u00F4ng t\u00ECm th\u1EA5y th\u00F4ng tin h\u1EC7 th\u1ED1ng
-no_valid_coordinates_found=Kh\u00F4ng t\u00ECm th\u1EA5y t\u1ECDa \u0111\u1ED9 h\u1EE3p l\u1EC7
+no_valid_coordinates_found=Kh\u00F4ng t\u00ECm th\u1EA5y T\u1ECDa \u0110\u1ED9 h\u1EE3p l\u1EC7
 open_last_chart=M\u1EDF bi\u1EC3u \u0111\u1ED3 g\u1EA7n nh\u1EA5t
-open_last_table=M\u1EDF b\u1EA3ng g\u1EA7n nh\u1EA5t
-openstreetmap=B\u1EA3n \u0111\u1ED3 giao th\u00F4ng (OpenStreetMap)
-open_this_map_as_chart=M\u1EDF b\u1EA3n \u0111\u1ED3 n\u00E0y d\u1EA1ng bi\u1EC3u \u0111\u1ED3
-open_this_map_as_table=M\u1EDF b\u1EA3n \u0111\u1ED3 n\u00E0y d\u1EA1ng b\u1EA3ng
+open_last_table=M\u1EDF b\u1EA3ng xoay g\u1EA7n nh\u1EA5t
+openstreetmap=OpenStreetMap
+open_this_map_as_chart=Xem b\u1EA3n \u0111\u1ED3 n\u00E0y b\u1EB1ng Bi\u1EC3u \u0110\u1ED3
+open_this_map_as_table=Xem b\u1EA3n \u0111\u1ED3 n\u00E0y b\u1EB1ng B\u1EA3ng Xoay
 options=T\u00F9y ch\u1ECDn
-organisation_unit=\u0110\u01A1n v\u1ECB
-organisation_unit_group_icons=K\u00FD hi\u1EC7u nh\u00F3m \u0111\u01A1n v\u1ECB
+organisation_unit=\u0110\u01A1n V\u1ECB
+organisation_unit_group_icons=K\u00FD hi\u1EC7u Nh\u00F3m \u0110\u01A1n V\u1ECB
 organisationunit_groupset=T\u1EADp Nh\u00F3m \u0110\u01A1n V\u1ECB
 organisation_units=\u0110\u01A1n V\u1ECB
 organisationunit_search=T\u00ECm ki\u1EBFm \u0111\u01A1n v\u1ECB
-osm_light=B\u1EA3n \u0111\u1ED3 \u00E1nh s\u00E1ng OSM
-overwrite=Ghi \u0111\u00E8
-overwrite_favorite=Ghi \u0111\u00E8 b\u00E1o c\u00E1o
+osm_light=OSM Light
+overwrite=L\u01B0u \u0111\u00E8
+overwrite_favorite=L\u01B0u \u0111\u00E8 B\u00E1o C\u00E1o Th\u01B0\u1EDDng D\u00F9ng
 page=Trang
 parent_unit=\u0110\u01A1n V\u1ECB Cha
 period=Th\u1EDDi \u0111i\u1EC3m
@@ -174,33 +174,33 @@ phone_number=S\u1ED1 \u0111i\u1EC7n tho\u1EA1i
 placement=\u0110\u1ECBnh V\u1ECB
 please_create_map_first=Xin vui l\u00F2ng t\u1EA1o b\u1EA3n \u0111\u1ED3
 please_enter_a_name=Xin vui l\u00F2ng nh\u1EADp t\u00EAn
-please_enter_map_title=Xin vui l\u00F2ng nh\u1EADp t\u00EAn b\u1EA3n \u0111\u1ED3
+please_enter_map_title=Xin vui l\u00F2ng nh\u1EADp ti\u00EAu \u0111\u1EC1 b\u1EA3n \u0111\u1ED3
 point_color=M\u00E0u \u0110i\u1EC3m
 point_radius=T\u1EC9 l\u1EC7 \u0110i\u1EC3m
 population_density=M\u1EADt \u0111\u1ED9 d\u00E2n s\u1ED1
 precipitation=L\u01B0\u1EE3ng m\u01B0a
 predefined=\u0110\u1ECBnh s\u1EB5n
 previous=Tr\u01B0\u1EDBc
-program=Ch\u01B0\u01A1ng tr\u00ECnh
-program_indicators=Ch\u1EC9 s\u1ED1 ch\u01B0\u01A1ng tr\u00ECnh
+program=Ch\u01B0\u01A1ng Tr\u00ECnh
+program_indicators=Ch\u1EC9 S\u1ED1 Ch\u01B0\u01A1ng Tr\u00ECnh
 public_access=C\u00F4ng khai
-quarterly=H\u00E0ng qu\u00FD
+quarterly=H\u00E0ng Qu\u00FD
 relative=T\u01B0\u01A1ng \u0111\u1ED1i
 relocate=Di d\u1EDDi
 relocate_facility=Di d\u1EDDi c\u01A1 s\u1EDF
 remove=Lo\u1EA1i b\u1ECF
-rename=\u0110\u1ED5i t\u00EAn
+rename=Thay t\u00EAn
 reporting_rates=T\u1EF7 l\u1EC7 b\u00E1o c\u00E1o
 revision=B\u1EA3n hi\u1EC7u ch\u1EC9nh
 search=T\u00ECm ki\u1EBFm
-search_for_favorites=T\u00ECm B\u00E1o C\u00E1o
+search_for_favorites=T\u00ECm B\u00E1o C\u00E1o Th\u01B0\u1EDDng D\u00F9ng
 search_for_user_groups=T\u00ECm Nh\u00F3m Ng\u01B0\u1EDDi D\u00F9ng
 select=Ch\u1ECDn
 select_groups=Ch\u1ECDn nh\u00F3m
-selection_mode=Ch\u1EBF \u0111\u1ED9 ch\u1ECDn
+selection_mode=Ch\u1ECDn Ch\u1EBF \u0110\u1ED9
 select_dataset=Ch\u1ECDn T\u1EADp D\u1EEF Li\u1EC7u
 select_layer=Ch\u1ECDn l\u1EDBp
-select_layer_from_google_earth_engine=Ch\u1ECDn l\u1EDBp t\u1EEB b\u1EA3n \u0111\u1ED3 tr\u00E1i \u0111\u1EA5t Google Earth Engine
+select_layer_from_google_earth_engine=Ch\u1ECDn l\u1EDBp t\u1EEB Google Earth Engine
 select_levels=Ch\u1ECDn Tuy\u1EBFn \u0110\u01A1n V\u1ECB
 select_organisation_unit_groups=Ch\u1ECDn Nh\u00F3m \u0110\u01A1n V\u1ECB
 select_organisation_unit_levels=Ch\u1ECDn Tuy\u1EBFn \u0110\u01A1n V\u1ECB
@@ -208,20 +208,20 @@ select_organisation_units=Ch\u1ECDn \u0110\u01A1n V\u1ECB
 select_period=Ch\u1ECDn Th\u1EDDi \u0110i\u1EC3m
 select_program=Ch\u1ECDn Ch\u01B0\u01A1ng Tr\u00ECnh
 select_service=Ch\u1ECDn d\u1ECBch v\u1EE5
-select_stage=Ch\u1ECDn giai \u0111o\u1EA1n
+select_stage=Ch\u1ECDn Giai \u0110o\u1EA1n Ch\u01B0\u01A1ng Tr\u00ECnh
 select_sub_units=Ch\u1ECDn \u0110\u01A1n V\u1ECB Con
 select_year=Ch\u1ECDn n\u0103m
-service_url=D\u1ECBch v\u1EE5 \u0111\u1ECBa ch\u1EC9 m\u1EA1ng (URL)
+service_url=D\u1ECBch v\u1EE5 URL
 share=Chia s\u1EBB
-share_with_other_people=Chia s\u1EBB v\u1EDBi ng\u01B0\u1EDDi d\u00F9ng kh\u00E1c
-sharing_settings=Thi\u1EBFt l\u1EADp chia s\u1EBB
+share_with_other_people=Chia s\u1EBB v\u1EDBi ng\u01B0\u1EDDi kh\u00E1c
+sharing_settings=C\u00E0i \u0110\u1EB7t Chia S\u1EBB
 show=Hi\u1EC7n
 show_circular_area=Hi\u1EC7n v\u00F9ng bao ph\u1EE7 v\u1EDBi t\u1EC9 l\u1EC7 (m)
 show_information_sheet=Hi\u1EC7n th\u00F4ng tin
 show_lon_lat=Hi\u1EC7n kinh \u0111\u1ED9/v\u0129 \u0111\u1ED9
-sixmonthly=H\u00E0ng s\u00E1u-th\u00E1ng
-sixmonthly_april=S\u00E1u-th\u00E1ng NTC th\u00E1ng 4
-stage=Giai \u0111o\u1EA1n
+sixmonthly=H\u00E0ng S\u00E1u-Th\u00E1ng
+sixmonthly_april=H\u00E0ng S\u00E1u-Th\u00E1ng NTC th\u00E1ng 4
+stage=Giai \u0110o\u1EA1n Ch\u01B0\u01A1ng Tr\u00ECnh
 start_date=Ng\u00E0y b\u1EAFt \u0111\u1EA7u
 start_end_dates=Ng\u00E0y b\u1EAFt \u0111\u1EA7u/k\u1EBFt th\u00FAc
 start_end_value=Gi\u00E1 tr\u1ECB \u0111\u1EA7u/cu\u1ED1i
@@ -237,37 +237,41 @@ table=B\u1EA3ng
 temperature=Nhi\u1EC7t \u0111\u1ED9
 text_filter=L\u1ECDc v\u0103n b\u1EA3n
 thematic_layer=L\u1EDBp Chuy\u00EAn \u0110\u1EC1
-thematic_layer_1_legend=Ch\u00FA gi\u1EA3i L\u1EDBp chuy\u00EAn \u0111\u1EC1 1
-thematic_layer_2_legend=Ch\u00FA gi\u1EA3i L\u1EDBp chuy\u00EAn \u0111\u1EC1 2
-thematic_layer_3_legend=Ch\u00FA gi\u1EA3i L\u1EDBp chuy\u00EAn \u0111\u1EC1 3
-thematic_layer_4_legend=Ch\u00FA gi\u1EA3i L\u1EDBp chuy\u00EAn \u0111\u1EC1 4
-this_bimonth=Hai-th\u00E1ng n\u00E0y
-this_financial_year=N\u0103m t\u00E0i ch\u00EDnh n\u00E0y
+thematic_layer_1_legend=Ch\u00FA Th\u00EDch L\u1EDBp Chuy\u00EAn \u0110\u1EC1 1
+thematic_layer_2_legend=Ch\u00FA Th\u00EDch L\u1EDBp Chuy\u00EAn \u0110\u1EC1 2
+thematic_layer_3_legend=Ch\u00FA Th\u00EDch L\u1EDBp Chuy\u00EAn \u0110\u1EC1 3
+thematic_layer_4_legend=Ch\u00FA Th\u00EDch L\u1EDBp Chuy\u00EAn \u0110\u1EC1 4
+this_bimonth=L\u1EA7n Hai-Th\u00E1ng n\u00E0y
+this_financial_year=N\u0103m T\u00E0i Ch\u00EDnh n\u00E0y
 this_month=Th\u00E1ng n\u00E0y
 this_quarter=Qu\u00FD n\u00E0y
-this_sixmonth=S\u00E1u-th\u00E1ng n\u00E0y
+this_sixmonth=L\u1EA7n S\u00E1u-Th\u00E1ng n\u00E0y
 this_week=Tu\u1EA7n n\u00E0y
 this_year=N\u0103m n\u00E0y
 time_since_last_data_update=Th\u1EDDi gian tr\u00F4i qua t\u1EEB khi c\u1EADp nh\u1EADt l\u1EA7n cu\u1ED1i
-today=H\u00F4m nay
-totals=T\u1ED5ng s\u1ED1
+today=H\u00F4m Nay
+totals=T\u1ED5ng
 update=C\u1EADp nh\u1EADt
-username=T\u00EAn ng\u01B0\u1EDDi d\u00F9ng
-user_is_not_assigned_to_any_organisation_units=Ng\u01B0\u1EDDi d\u00F9ng kh\u00F4ng \u0111\u01B0\u1EE3c g\u00E1n cho b\u1EA5t c\u1EE9 \u0111\u01A1n v\u1ECB n\u00E0o
-user_organisation_unit=\u0110\u01A1n v\u1ECB c\u1EE7a ng\u01B0\u1EDDi d\u00F9ng
+username=T\u00EAn \u0111\u0103ng nh\u1EADp
+user_is_not_assigned_to_any_organisation_units=Ng\u01B0\u1EDDi d\u00F9ng kh\u00F4ng \u0111\u01B0\u1EE3c g\u00E1n cho b\u1EA5t k\u1EF3 \u0111\u01A1n v\u1ECB n\u00E0o
+user_organisation_unit=\u0110\u01A1n v\u1ECB ng\u01B0\u1EDDi d\u00F9ng
 user_ou=\u0110\u01A1n V\u1ECB ng\u01B0\u1EDDi d\u00F9ng
-user_sub_units=\u0110\u01A1n-v\u1ECB-con c\u1EE7a ng\u01B0\u1EDDi d\u00F9ng
-user_sub_x2_units=\u0110\u01A1n-v\u1ECB-con-x2 c\u1EE7a ng\u01B0\u1EDDi d\u00F9ng
+user_sub_units=\u0110\u01A1n-v\u1ECB-con ng\u01B0\u1EDDi d\u00F9ng
+user_sub_x2_units=\u0110\u01A1n-v\u1ECB-con-x2 ng\u01B0\u1EDDi d\u00F9ng
 value=Gi\u00E1 tr\u1ECB
 value_type=Ki\u1EC3u gi\u00E1 tr\u1ECB
 variance=Ph\u01B0\u01A1ng sai
 version=Phi\u00EAn b\u1EA3n
-weekly=H\u00E0ng tu\u1EA7n
-write_interpretation=Vi\u1EBFt Di\u1EC5n D\u1ECBch
-write_your_interpretation=Vi\u1EBFt di\u1EC5n d\u1ECBch c\u1EE7a b\u1EA1n
-yearly=H\u00E0ng n\u0103m
+weekly=H\u00E0ng Tu\u1EA7n
+weekly_wednesday=Weekly (Start Wednesday)
+weekly_thursday=Weekly (Start Thursday)
+weekly_saturday=Weekly (Start Saturday)
+weekly_sunday=Weekly (Start Sunday)
+write_interpretation=Vi\u1EBFt Di\u1EC5n Gi\u1EA3i
+write_your_interpretation=Vi\u1EBFt Di\u1EC5n Gi\u1EA3i c\u1EE7a b\u1EA1n
+yearly=H\u00E0ng N\u0103m
 yes=C\u00F3
-yesterday=H\u00F4m qua
+yesterday=H\u00F4m Qua
 you_can_not_select_organisation_units_below_the_selected_level=B\u1EA1n kh\u00F4ng th\u1EC3 ch\u1ECDn \u0110\u01A1n V\u1ECB th\u1EA5p h\u01A1n Tuy\u1EBFn \u0110\u01A1n V\u1ECB \u0111\u00E3 ch\u1ECDn
-you_do_not_have_access_to_all_items_in_this_favorite=B\u1EA1n kh\u00F4ng c\u00F3 quy\u1EC1n truy su\u1EA5t t\u1EA5t c\u1EA3 m\u1EE5c trong b\u00E1o c\u00E1o n\u00E0y
+you_do_not_have_access_to_all_items_in_this_favorite=B\u1EA1n kh\u00F4ng c\u00F3 quy\u1EC1n truy c\u1EADp t\u1EA5t c\u1EA3 m\u1EE5c trong b\u00E1o c\u00E1o th\u01B0\u1EDDng d\u00F9ng n\u00E0y
 
